Added moving on a grid prototype